# jenkins-test

./: CMakeLists.txt  README.md
knowledge/: CMakeLists.txt
knowledge/include/soul/knowledge/msg/: person_state.h
messaging/: CMakeLists.txt
messaging/include/soul/messaging/: interface.h  list.h  manager.h  message_publisher.h  message_subscriber.h  queue.h  type.h
messaging/src/: manager.cc  queue.cc
messaging/tests/: CMakeLists.txt
messaging/tests/include/: dummy_msg.h
messaging/tests/src/: manager_test.cc  queue_test.cc
plugins/: CMakeLists.txt
plugins/include/soul/plugins/: interface.h  manager.h
plugins/tests/: CMakeLists.txt
plugins/tests/include/: dummy_plugin_type.h
plugins/tests/src/: dummy_plugin.cc  manager_test.cc
sense/: CMakeLists.txt
sense/include/soul/sense/: hw_manager.h  hw_plugin_interface.h  hw_plugin_profile.h  manager.h  plugin_interface.h  plugin_profile.h  plugin_state.h
sense/include/soul/sense/math/: bounding_box.h  point.h  pose.h  quaternion.h  size.h
sense/include/soul/sense/msg/: body_parts.h  face_detection.h  face_encoding.h  face_landmarks.h  header.h  image.h  sense_msg.h
sense/src/: hw_manager.cc  manager.cc  manager_main.cc
sense/tests/: CMakeLists.txt
sense/tests/include/: dummy_sense_hw_plugin.h  dummy_sense_plugin.h
sense/tests/src/: dummy_sense_hw_plugin.cc  dummy_sense_plugin.cc  hw_manager_test.cc  manager_msgs_test.cc  manager_test.cc  plugin_manager_test.cc  sense_math_test.cc  sense_msgs_test.cc
